--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
 
 /* Your CSS Code here. */
+
+table {
+	border: 2px solid black;
+	width: 100%;
+}
+th, td {
+	border: 2px solid black;
+	padding: 10px;
+	text-align: center;
+}
+.main-table td {
+	width: 50%;
+	vertical-align: top;
+	padding: 20px;
+}
+.black-cell {
+	background-color: black;
+	color: white;
+	font-weight: bold;
+}
